# pg_orca

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  COPYRIGHT  README.md  pg_cascades--1.0.sql  pg_cascades.cpp  pg_orca.cpp
libgpos/: CMakeLists.txt
libgpos/include/gpos/: _api.h  assert.h  attributes.h  base.h  types.h  utils.h
libgpos/include/gpos/common/: CAutoP.h  CAutoRef.h  CAutoRg.h  CAutoTimer.h  CBitSet.h  CBitSetIter.h  CBitVector.h  CDebugCounter.h  CDouble.h  CDynamicPtrArray.h  CEnumSet.h  CEnumSetIter.h  CHashMap.h  CHashMapIter.h  CHashSet.h  CHashSetIter.h  CHeapObject.h  CLink.h  CList.h  CMainArgs.h  CPrintablePointer.h  CRandom.h  CRefCount.h  CStack.h  CStackDescriptor.h  CStackObject.h  CSyncHashtable.h  CSyncHashtableAccessByIter.h  CSyncHashtableAccessByKey.h  CSyncHashtableAccessorBase.h  CSyncHashtableIter.h  CSyncList.h  CSyncPool.h  CTimerUser.h  CWallClock.h  DbgPrintMixin.h  ITimer.h  clibtypes.h  clibwrapper.h  syslibwrapper.h
libgpos/include/gpos/error/: CAutoExceptionStack.h  CAutoTrace.h  CErrorContext.h  CErrorHandler.h  CErrorHandlerStandard.h  CException.h  CLogger.h  CLoggerStream.h  CLoggerSyslog.h  CMessage.h  CMessageRepository.h  CMessageTable.h  CMiniDumper.h  CSerializable.h  IErrorContext.h  ILogger.h
libgpos/include/gpos/io/: CFileDescriptor.h  CFileReader.h  CFileWriter.h  COstream.h  COstreamBasic.h  COstreamStdString.h  COstreamString.h  IOstream.h  iotypes.h  ioutils.h
libgpos/include/gpos/memory/: CAutoMemoryPool.h  CCache.h  CCacheAccessor.h  CCacheEntry.h  CCacheFactory.h  CMemoryPool.h  CMemoryPoolManager.h  CMemoryPoolStatistics.h  CMemoryPoolTracker.h  CMemoryVisitorPrint.h  IMemoryVisitor.h  MemoryPoolAllocator.h  deque.h  queue.h  set.h  stack.h
libgpos/include/gpos/string/: CStringStatic.h  CWString.h  CWStringBase.h  CWStringConst.h  CWStringDynamic.h  CWStringStatic.h
libgpos/include/gpos/task/: CAutoSuspendAbort.h  CAutoTaskProxy.h  CAutoTraceFlag.h  CTask.h  CTaskContext.h  CTaskId.h  CTaskLocalStorage.h  CTaskLocalStorageObject.h  CTaskSchedulerFifo.h  CTraceFlagIter.h  CWorker.h  CWorkerPoolManager.h  ITask.h  ITaskScheduler.h  IWorker.h  traceflags.h
libgpos/include/gpos/test/: CUnittest.h
libgpos/server/include/unittest/gpos/common/: CAutoPTest.h  CAutoRefTest.h  CAutoRgTest.h  CBitSetIterTest.h  CBitSetTest.h  (+13 more)
libgpos/server/src/startup/: main.cpp
libgpos/src/: _api.cpp  utils.cpp
libgpos/src/common/: CAutoTimer.cpp  CBitSet.cpp  CBitSetIter.cpp  CBitVector.cpp  CDebugCounter.cpp  CHeapObject.cpp  CMainArgs.cpp  CRandom.cpp  CStackDescriptor.cpp  CStackObject.cpp  CTimerUser.cpp  CWallClock.cpp  clibwrapper.cpp  syslibwrapper.cpp
libgpos/src/error/: CAutoExceptionStack.cpp  CAutoTrace.cpp  CErrorContext.cpp  CErrorHandlerStandard.cpp  CException.cpp  CLogger.cpp  CLoggerStream.cpp  CLoggerSyslog.cpp  CMessage.cpp  CMessageRepository.cpp  CMessageTable.cpp  CMiniDumper.cpp  CSerializable.cpp  ILogger.cpp
libgpos/src/io/: CFileDescriptor.cpp  CFileReader.cpp  CFileWriter.cpp  COstream.cpp  COstreamBasic.cpp  COstreamStdString.cpp  COstreamString.cpp  ioutils.cpp
libgpos/src/memory/: CAutoMemoryPool.cpp  CCacheFactory.cpp  CMemoryPool.cpp  CMemoryPoolManager.cpp  CMemoryPoolTracker.cpp  CMemoryVisitorPrint.cpp
libgpos/src/string/: CStringStatic.cpp  CWString.cpp  CWStringBase.cpp  CWStringConst.cpp  CWStringDynamic.cpp  CWStringStatic.cpp
libgpos/src/task/: CAutoSuspendAbort.cpp  CAutoTaskProxy.cpp  CAutoTraceFlag.cpp  CTask.cpp  CTaskContext.cpp  CTaskLocalStorage.cpp  CTaskSchedulerFifo.cpp  CWorker.cpp  CWorkerPoolManager.cpp  ITask.cpp  IWorker.cpp
libgpos/src/test/: CUnittest.cpp
(+2110 files in other folders)
